<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomNavigationView"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".presentation.activity.WorkoutBuilderActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <!-- Workout Icon Selection -->
            <ImageView
                android:id="@+id/imgWorkoutIcon"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/workout_icon"
                android:focusable="true"
                android:paddingStart="0dp"
                android:paddingEnd="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_default_workout" />

            <!-- Workout Name Input -->
            <EditText
                android:id="@+id/edtWorkoutName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Workout Name"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/new_workout"
                android:padding="10dp"
                android:textSize="24sp" />
        </LinearLayout>

        <!-- Save Button -->
        <Button
            android:id="@+id/btnSaveWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSave"
            android:padding="12dp"
            android:text="@string/save" />

        <!-- RecyclerView for Workout Items -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerWorkoutItems"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="8dp" />
    </LinearLayout>

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_workout_item"
        android:onClick="onClickFAB"
        android:src="@android:drawable/ic_input_add" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/nav_bar_border"
        app:itemIconSize="60dp"
        app:itemTextColor="@drawable/bottom_nav_icon_colour"
        app:itemIconTint="@drawable/bottom_nav_icon_colour"
        style="@style/MyBottomNavigationStyle"
        app:menu="@menu/nav_bar" />
</RelativeLayout>