<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/selectedExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_selection"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="8dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/edtSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sets"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtReps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reps"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edtTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnAddWorkoutItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>